# tsmom-band

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PREDICTION.md  PREREGISTRATION.md  README.md  RUNBOOK.md  pyproject.toml
data/holdout/: HASH
docs/: ANTI_LOOKAHEAD_REVIEW.md
research/: band_sweep.py
scripts/: check_holdout_hash.py  preflight.py
src/twenty/backtest/: engine.py  fills.py  ledger.py  types.py
src/twenty/costs/: breakeven.py  ibkr.py  slippage.py
src/twenty/data/: bootstrap.py  quality.py  schema.py  sources.py  store.py
src/twenty/evaluation/: deflated_sharpe.py  metrics.py  predict.py  tearsheet.py  trials.py
src/twenty/execution/: broker.py  connection.py  journal.py  reconcile.py  runner.py  schedule.py
src/twenty/risk/: checks.py  killswitch.py  limits.py  sizing.py
src/twenty/strategies/: tsmom_band.py
tests/backtest/: conftest.py  test_anti_lookahead.py
tests/costs/: test_ibkr.py  test_slippage.py
tests/data/: test_sources.py  test_store.py
tests/execution/: test_execution.py  test_runner_reconnect.py  test_schedule.py
tests/risk/: test_checks.py  test_killswitch.py
tests/strategies/: test_tsmom_band.py
